# accounting-anomaly-detector

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: project.mdc  ui.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: DEVELOPMENT_SPEC.md  TODO.md
src/accounting_anomaly/: main.py
src/accounting_anomaly/core/: anomaly.py  categories.py  csv_parser.py  payee.py
src/accounting_anomaly/db/: __init__.py  database.py
src/accounting_anomaly/ui/: import_dialog.py  main_window.py  review_dialog.py  transaction_table.py
tests/: test_anomaly.py  test_categories.py  test_csv_parser.py  test_database.py  test_payee.py
