[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accounting-anomaly-detector"
version = "0.1.0"
description = "Desktop app for importing, auditing, and anomaly-detecting banking transactions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
accounting-anomaly = "accounting_anomaly.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/accounting_anomaly"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
